// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swapRequestCompleted updates swap request and associated quote 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 9876545n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": {
    "depositAmount": "10000000000",
    "destAsset": "Dot",
    "egressAmount": "2000000",
    "estimatedPrice": "25000",
    "executedAt": 2022-12-06T14:31:45.000Z,
    "executedPrice": "24800",
    "executedSlippagePercent": "0.8",
    "id": Any<Number>,
    "intermediateAmount": null,
    "maxBoostFeeBps": 0,
    "numberOfChunks": null,
    "srcAsset": "Eth",
    "swapDepositChannelId": Any<BigInt>,
    "swapRequestId": Any<BigInt>,
  },
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": 100n,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "2480000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
}
`;

exports[`swapRequestCompleted updates swap request with multiple swaps 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "depositAmount": "30000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 9876545n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "30000000000",
  "swapOutputAmount": "7000000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
}
`;

exports[`swapRequestCompleted updates swap request with single swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 9876545n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "2500000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
}
`;
